Se agrega navegacion para las Habilidades

--- a/locales/en.json
+++ b/locales/en.json
@@ -2,6 +2,7 @@
   "navigation": {
     "home": "Home",
     "about": "About me",
+    "skills": "Skills",
     "services": "Services"
   },
   "presentation": {
